@@ -11,7 +11,7 @@
 			<B>{t}Name:{/t}</B>
 		</TD>
 		<TD WIDTH="98%" CLASS="FRIGHTU">
-			<INPUT TYPE="TEXT" NAME="ipadd[name]" VALUE="{$nodeipdata.name|upper}" MAXLENGTH="16" {tip text="Enter address name" trigger="ipname" bold=1}>
+			<INPUT TYPE="TEXT" NAME="ipadd[name]" VALUE="{$nodeipdata.name|upper}" MAXLENGTH="32" size="30" {tip text="Enter address name" trigger="ipname" bold=1}>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
