@@ -9,7 +9,7 @@
 		<TD WIDTH="1%" CLASS="FBT">
 			<B>{t}Name:{/t}</B>
 		<TD WIDTH="98%" CLASS="FRIGHTU">
-			<INPUT TYPE="TEXT" NAME="nodedata[name]" VALUE="{$nodedata.name|upper}" MAXLENGTH="16" {tip text="Enter node name" trigger="name" bold=1}>
+			<INPUT TYPE="TEXT" NAME="nodedata[name]" VALUE="{$nodedata.name|upper}" MAXLENGTH="32" size="30" {tip text="Enter node name" trigger="name" bold=1}>
 		</TD>
 	</TR>
         <TR class="LIGHT">
