@@ -8,7 +8,7 @@
 			<IMG SRC="img/node.gif" ALT="">
 		</TD>
 		<TD WIDTH="99%" CLASS="FRIGHTU" COLSPAN="2">
-			<INPUT TYPE="TEXT" NAME="nodeedit[name]" VALUE="{$nodeinfo.name|upper}" MAXLENGTH="16" {tip text="Enter node name" trigger="name" bold=1}>
+			<INPUT TYPE="TEXT" NAME="nodeedit[name]" VALUE="{$nodeinfo.name|upper}" MAXLENGTH="32" size="30" {tip text="Enter node name" trigger="name" bold=1}>
 			<B>({$nodeinfo.id|string_format:"%04d"})</B>
 		</TD>
 	</TR>
